@@ -2,6 +2,7 @@
 
 	* logo-competition/logos_new.php:
 	* logo-competition/logos/Slava_Finkelsteyn/*:
+	* logo-competition/logos/Gabriel_Feld/*:
 	added logos
 
 	* logo-competition/logos_new.php: 
